# Specialized_Test

./: .gitignore  README.md  west.yml
.github/workflows/: build-and-test.yml
app/: CMakeLists.txt  Kconfig  prj.conf  prj_smoke.conf
app/include/specialized/: app_can_message.h  app_config_model.h  app_logic.h  can_formatter.h  runtime.h  zephyr_app_config.h
app/src/: app_config_model.c  app_logic.c  can_formatter.c  main.c  runtime.c  zephyr_app_config.c
docs/: approach.md  build.md  plan.md  progress.md
tests/unit/: CMakeLists.txt  testcase.yaml
tests/unit/src/: test_app_config_model.c  test_app_logic.c  test_can_formatter.c
